First green BowlingGameTest